--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     <h1 id="first_text">Michael Joseph Jackson</h1>
 
     <div id="options">
-        <div id="biography_option" class="option">
-            <img src="./src/icons/biography.svg" >
+        <div id="biography_option" class="option" onclick="open_option(1)">
+            <img src="./src/icons/biography.svg">
             <div class="option_text">Biography of one of the most successful performers in the history of pop music, known as the "King of Pop", winner of 15 Grammy awards and hundreds of other awards.</div>
         </div>
-        <div id="music_option" class="option"></div>
+        <div id="music_option" class="option" onclick="open_option(0)">
+            <img src="./src/icons/music.svg">
+            <div class="option_text">Listen to some of Michael Jackson's most popular songs</div>
+        </div>
     </div>
 
 </body>
