--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
 
       <div id="list_div" class="music_div_child">
-        <div class="music_list_child">
+        <div class="music_list_child" style="filter:invert(1);">
           <h1>Beat It</h1>
           <h2>The jackson 50</h2>
           <h3>11:56</h3>
